--- a/index.html
+++ b/index.html
@@ -295,20 +295,17 @@
                 <div class="summary-label">Total Indicators</div>
             </div>
             <div class="summary-card achieved">
-                <div class="summary-number" style="color: #10b981;">18</div>
-                <div class="summary-label">Fully Achieved (72%)</div>
+                <div class="summary-number" style="color: #10b981;">17</div>
+                <div class="summary-label">Fully Achieved (68%)</div>
             </div>
             <div class="summary-card progress">
-                <div class="summary-number" style="color: #f59e0b;">4</div>
-                <div class="summary-label">In Progress (16%)</div>
+                <div class="summary-number" style="color: #f59e0b;">5</div>
+                <div class="summary-label">In Progress (20%)</div>
             </div>
             <div class="summary-card not-achieved">
                 <div class="summary-number" style="color: #ef4444;">2</div>
                 <div class="summary-label">Not Achieved (8%)</div>
             </div>
-            <div class="summary-card" style="border-top-color: #6366f1;">
-                <div class="summary-number" style="color: #6366f1;">1</div>
-                <div class="summary-label">Baseline Only</div>
             </div>
         </div>
         
@@ -319,7 +316,7 @@
             <div class="theme-detail srh">
                 <div class="theme-title">
                     <span>🏥 Sexual & Reproductive Health (SRH)</span>
-                    <span class="theme-summary">9 indicators: 8 Achieved (89%), 1 In Progress (11%)</span>
+                    <span class="theme-summary">9 indicators: 7 Achieved (78%), 2 In Progress (22%)</span>
                 </div>
                 
                 <table class="indicators-table">
@@ -339,7 +336,7 @@
                             <td><strong>1.1 Maternal Mortality Ratio</strong></td>
                             <td class="achievement-value">136/100,000</td>
                             <td><div class="target-info">Target 2024: 110<br>Target 2026: 100</div></td>
-                            <td><span class="status-pill achieved">Achieved</span></td>
+                            <td><span class="status-pill achieved">Progress</span></td>
                             <td class="achievement-value">✓ On track</td>
                         </tr>
                         <tr>
@@ -784,3 +781,4 @@
                 }
             }
         });
+
